<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_menu_shopping_bag_24"
            android:title="@string/menu_order" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_menu_product"
            android:title="@string/menu_products" />
        <item
            android:id="@+id/nav_delivery"
            android:icon="@drawable/ic_item_card_order_delivery"
            android:title="@string/menu_delivery" />
    </group>
</menu>