<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_orders">

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.mateusandreatta.gabriellasbrigadeiria.ui.order.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.mateusandreatta.gabriellasbrigadeiria.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_product"
        android:name="com.mateusandreatta.gabriellasbrigadeiria.ui.product.ProductFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_product" />
</navigation>